--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
 html,
 body,
 div,
@@ -82,7 +90,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 62.5%;
   font: inherit;
   vertical-align: baseline; }
 
@@ -120,3 +128,191 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #fff;
+  color: #777;
+  overflow-x: hidden; }
+
+.container-fluid {
+  padding: 0; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #fff;
+  color: #777;
+  overflow-x: hidden; }
+
+.container-fluid {
+  padding: 0; }
+
+nav {
+  z-index: 999;
+  width: 100vw;
+  background: transparent;
+  position: absolute;
+  top: 30px; }
+  nav .nav-bar {
+    max-width: 1000px;
+    margin: 0 auto; }
+    nav .nav-bar .nav-logo {
+      float: left;
+      width: 20%;
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%); }
+    nav .nav-bar .nav-menu {
+      position: relative;
+      top: 50%;
+      -webkit-transition: translateY(-50%);
+      -o-transition: translateY(-50%);
+      transition: translateY(-50%);
+      float: right;
+      width: 80%; }
+      nav .nav-bar .nav-menu .nav-menu-content li {
+        position: relative;
+        float: right; }
+        nav .nav-bar .nav-menu .nav-menu-content li a {
+          display: block;
+          font-size: 14px;
+          font-weight: 400;
+          text-transform: uppercase;
+          padding: 0 20px;
+          line-height: 3;
+          color: #fff; }
+          nav .nav-bar .nav-menu .nav-menu-content li a:hover {
+            text-decoration: none;
+            background: #fed136; }
+
+.photo-inner {
+  background: url("../images/parallax-photo/background-image.png") no-repeat fixed center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  padding-top: 100px;
+  z-index: -1; }
+  .photo-inner .content {
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
+    .photo-inner .content h1 {
+      color: #ffffff;
+      font-size: 75px;
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-bottom: 59px; }
+    .photo-inner .content h2 {
+      color: #ffffff;
+      font-family: "Droid Serif";
+      font-size: 40px;
+      font-style: italic;
+      margin-bottom: 52px; }
+    .photo-inner .content button {
+      width: 265px;
+      height: 65px;
+      background-color: #fed136;
+      border: none;
+      border-radius: 5px; }
+      .photo-inner .content button span {
+        font-size: 18px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #fff; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #fff;
+  color: #777;
+  overflow-x: hidden; }
+
+.container-fluid {
+  padding: 0; }
+
+#services .title {
+  margin: 120px auto 80px auto;
+  text-align: center; }
+  #services .title h2 {
+    color: #222;
+    font-family: "Montserrat", sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 75px;
+    text-transform: uppercase; }
+  #services .title p {
+    color: #777;
+    font-family: "Droid Serif";
+    font-size: 16px;
+    font-weight: 400;
+    font-style: italic; }
+
+#services .service {
+  text-align: center;
+  margin-bottom: 120px; }
+  #services .service h3 {
+    color: #222;
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 75px; }
+  #services .service p {
+    color: #777;
+    font-family: "Roboto Slab", serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.6; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #fff;
+  color: #777;
+  overflow-x: hidden; }
+
+.container-fluid {
+  padding: 0; }
+
+#our-portfolio .title {
+  margin: 120px auto 80px auto;
+  text-align: center; }
+  #our-portfolio .title h2 {
+    color: #222;
+    font-family: "Montserrat", sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 75px;
+    text-transform: uppercase; }
+  #our-portfolio .title p {
+    color: #777;
+    font-family: "Droid Serif";
+    font-size: 16px;
+    font-weight: 400;
+    font-style: italic; }
+
+#our-portfolio .gallery .image-1 {
+  background: url("../images/gallery/image-1.png"); }
