--- a/src/css/style.css
+++ b/src/css/style.css
@@ -256,15 +256,15 @@ body {
   margin: 120px auto 80px auto;
   text-align: center; }
   #services .title h2 {
-    color: #222;
     font-family: "Montserrat", sans-serif;
+    color: #222;
     font-size: 40px;
     font-weight: 700;
     line-height: 75px;
     text-transform: uppercase; }
   #services .title p {
-    color: #777;
     font-family: "Droid Serif";
+    color: #777;
     font-size: 16px;
     font-style: italic; }
 
@@ -304,15 +304,15 @@ body {
     margin: 120px auto 80px auto;
     text-align: center; }
     #our-portfolio .title h2 {
-      color: #222;
       font-family: "Montserrat", sans-serif;
+      color: #222;
       font-size: 40px;
       font-weight: 700;
       line-height: 75px;
       text-transform: uppercase; }
     #our-portfolio .title p {
-      color: #777;
       font-family: "Droid Serif";
+      color: #777;
       font-size: 16px;
       font-style: italic; }
   #our-portfolio .gallery {
@@ -363,18 +363,118 @@ body {
 .container-fluid {
   padding: 0; }
 
+#about-us .timeline .container-timeline:nth-of-type(1)::after, #about-us .timeline .container-timeline:nth-of-type(3)::after, #about-us .timeline .container-timeline:nth-of-type(2)::before, #about-us .timeline .container-timeline:nth-of-type(4)::before, #about-us .timeline .container-timeline:last-of-type::after {
+  content: '';
+  position: absolute;
+  width: 170px;
+  height: 170px;
+  border: 4px solid #f1f1f1;
+  top: 0;
+  border-radius: 50%;
+  z-index: 1; }
+
 #about-us .title {
   margin: 120px auto 80px auto;
   text-align: center; }
   #about-us .title h2 {
-    color: #222;
     font-family: "Montserrat", sans-serif;
+    color: #222;
     font-size: 40px;
     font-weight: 700;
     line-height: 75px;
     text-transform: uppercase; }
   #about-us .title p {
-    color: #777;
     font-family: "Droid Serif";
+    color: #777;
     font-size: 16px;
     font-style: italic; }
+
+#about-us .timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  background: transparent; }
+  #about-us .timeline::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    width: 3px;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    background-color: #f1f1f1;
+    z-index: 1; }
+  #about-us .timeline .container-timeline {
+    position: relative;
+    background-color: transparent;
+    width: 50%;
+    height: 170px;
+    margin-bottom: 95px; }
+    #about-us .timeline .container-timeline:nth-of-type(1)::after {
+      background-image: url("../images/about-us/image-1.png");
+      right: 0;
+      -webkit-transform: translateX(50%);
+          -ms-transform: translateX(50%);
+              transform: translateX(50%); }
+    #about-us .timeline .container-timeline:nth-of-type(3)::after {
+      background-image: url("../images/about-us/image-3.png");
+      right: 0;
+      -webkit-transform: translateX(50%);
+          -ms-transform: translateX(50%);
+              transform: translateX(50%); }
+    #about-us .timeline .container-timeline:nth-of-type(2)::before {
+      background-image: url("../images/about-us/image-2.png");
+      left: 0;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%); }
+    #about-us .timeline .container-timeline:nth-of-type(4)::before {
+      background-image: url("../images/about-us/image-4.png");
+      left: 0;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%); }
+    #about-us .timeline .container-timeline:last-of-type::after {
+      right: 0;
+      -webkit-transform: translateX(50%);
+          -ms-transform: translateX(50%);
+              transform: translateX(50%);
+      content: 'Our Story Continues ...';
+      text-align: center;
+      background-color: #fed136;
+      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
+      color: #ffffff;
+      font-family: "Montserrat", sans-serif;
+      font-size: 18px;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding: 50px 30px; }
+  #about-us .timeline .constainer-left {
+    text-align: right;
+    left: 0;
+    padding: 10px;
+    padding-right: 130px;
+    padding-left: 150px; }
+  #about-us .timeline .constainer-right {
+    text-align: left;
+    left: 50%;
+    padding: 10px;
+    padding-left: 130px;
+    padding-right: 150px; }
+  #about-us .timeline h3 {
+    color: #222222;
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 17px; }
+    #about-us .timeline h3 > span {
+      text-transform: uppercase; }
+  #about-us .timeline p {
+    color: #777777;
+    font-family: "Roboto Slab", serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.3; }
