--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
 html,
 body,
 div,
@@ -371,7 +373,8 @@ body {
   border: 4px solid #f1f1f1;
   top: 0;
   border-radius: 50%;
-  z-index: 1; }
+  z-index: 1;
+  background-color: #f1f1f1; }
 
 #about-us .title {
   margin: 120px auto 80px auto;
@@ -446,26 +449,26 @@ body {
       text-align: center;
       background-color: #fed136;
       text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
-      color: #ffffff;
+      color: #fff;
       font-family: "Montserrat", sans-serif;
       font-size: 18px;
       font-weight: 700;
       text-transform: uppercase;
       padding: 50px 30px; }
-  #about-us .timeline .constainer-left {
+  #about-us .timeline .container-left {
     text-align: right;
     left: 0;
     padding: 10px;
     padding-right: 130px;
     padding-left: 150px; }
-  #about-us .timeline .constainer-right {
+  #about-us .timeline .container-right {
     text-align: left;
     left: 50%;
     padding: 10px;
     padding-left: 130px;
     padding-right: 150px; }
   #about-us .timeline h3 {
-    color: #222222;
+    color: #222;
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -473,8 +476,38 @@ body {
     #about-us .timeline h3 > span {
       text-transform: uppercase; }
   #about-us .timeline p {
-    color: #777777;
+    color: #777;
     font-family: "Roboto Slab", serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.3; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #fff;
+  color: #777;
+  overflow-x: hidden; }
+
+.container-fluid {
+  padding: 0; }
+
+#team .title {
+  margin: 120px auto 80px auto;
+  text-align: center; }
+  #team .title h2 {
+    font-family: "Montserrat", sans-serif;
+    color: #222;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 75px;
+    text-transform: uppercase; }
+  #team .title p {
+    font-family: "Droid Serif";
+    color: #777;
+    font-size: 16px;
+    font-style: italic; }
