--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
 html,
 body,
 div,
@@ -661,3 +663,41 @@ body {
           font-weight: 700;
           text-transform: uppercase;
           color: #fff; }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px; }
+
+body {
+  font-family: "Montserrat", sans-serif;
+  background: #fff;
+  color: #777;
+  overflow-x: hidden; }
+
+.container-fluid {
+  padding: 0; }
+
+footer .social-media {
+  padding: 20px; }
+  footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    background-color: #000;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    margin: 0 10px; }
+    footer .social-media .icon-btn:hover {
+      background-color: #fff;
+      color: #000;
+      border: 3px solid #000; }
+  footer .social-media .copyright {
+    color: #555555;
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    margin: auto 230px; }
