--- a/src/css/style.css
+++ b/src/css/style.css
@@ -217,6 +217,16 @@ nav {
           nav .nav-bar .nav-menu .nav-menu-content li a:hover {
             text-decoration: none;
             background: #fed136; }
+    nav .nav-bar .nav-mobile {
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: transparent;
+      height: 70px;
+      width: 70px; }
+    @media (max-width: 767px) {
+      nav .nav-bar .nav-menu-content li {
+        display: none; } }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
@@ -664,7 +674,8 @@ body {
 
 #form-contact {
   background-color: #222222;
-  border: 1px solid #222222; }
+  border: 1px solid #222222;
+  position: relative; }
   #form-contact .title {
     margin: 100px auto 80px auto;
     text-align: center; }
@@ -712,6 +723,14 @@ body {
           font-weight: 700;
           text-transform: uppercase;
           color: #fff; }
+  #form-contact::after {
+    content: '';
+    background-image: url("../images/contact/map-image.png");
+    position: absolute;
+    top: 20%;
+    left: 55%;
+    width: 100%;
+    height: 100%; }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
