--- a/src/css/style.css
+++ b/src/css/style.css
@@ -183,10 +183,17 @@ nav {
   background: transparent;
   position: absolute;
   top: 30px; }
+  @media (max-width: 767px) {
+    nav {
+      top: 0;
+      background: #333333; } }
   nav .nav-bar {
     width: 80%;
     max-width: 1000px;
     margin: 0 auto; }
+    @media (max-width: 767px) {
+      nav .nav-bar {
+        width: 100%; } }
     nav .nav-bar .nav-logo {
       float: left;
       width: 20%;
@@ -195,6 +202,9 @@ nav {
       -webkit-transition: translateY(-50%);
       -o-transition: translateY(-50%);
       transition: translateY(-50%); }
+      @media (max-width: 767px) {
+        nav .nav-bar .nav-logo {
+          padding: 10px; } }
     nav .nav-bar .nav-menu {
       position: relative;
       top: 50%;
@@ -203,8 +213,17 @@ nav {
       transition: translateY(-50%);
       float: right;
       width: 80%; }
+      @media (max-width: 767px) {
+        nav .nav-bar .nav-menu {
+          width: 100%; } }
+      @media (max-width: 767px) {
+        nav .nav-bar .nav-menu .nav-menu-content {
+          display: none; } }
       nav .nav-bar .nav-menu .nav-menu-content li {
         float: right; }
+        @media (max-width: 767px) {
+          nav .nav-bar .nav-menu .nav-menu-content li {
+            float: none; } }
         nav .nav-bar .nav-menu .nav-menu-content li a {
           display: block;
           font-size: 14px;
@@ -219,6 +238,62 @@ nav {
           @media (min-width: 992px) {
             nav .nav-bar .nav-menu .nav-menu-content li a {
               padding: 0 20px; } }
+          @media (max-width: 767px) {
+            nav .nav-bar .nav-menu .nav-menu-content li a {
+              padding: 10px; } }
+      @media (min-width: 768px) {
+        nav .nav-bar .nav-menu .nav-menu-content {
+          display: block !important; } }
+    nav .nav-bar .nav-mobile {
+      display: none;
+      position: absolute;
+      top: 0;
+      right: 17px;
+      background: #333;
+      height: 50px;
+      width: 50px; }
+      @media (max-width: 767px) {
+        nav .nav-bar .nav-mobile {
+          display: block; } }
+      nav .nav-bar .nav-mobile #nav-toggle {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        cursor: pointer;
+        padding: 10px 35px 16px 0px; }
+        nav .nav-bar .nav-mobile #nav-toggle span,
+        nav .nav-bar .nav-mobile #nav-toggle span:before,
+        nav .nav-bar .nav-mobile #nav-toggle span:after {
+          cursor: pointer;
+          border-radius: 1px;
+          height: 5px;
+          width: 35px;
+          background: #fff;
+          position: absolute;
+          display: block;
+          content: '';
+          -webkit-transition: all 300ms ease-in-out;
+          -o-transition: all 300ms ease-in-out;
+          transition: all 300ms ease-in-out; }
+        nav .nav-bar .nav-mobile #nav-toggle span:before {
+          top: -10px; }
+        nav .nav-bar .nav-mobile #nav-toggle span:after {
+          bottom: -10px; }
+        nav .nav-bar .nav-mobile #nav-toggle.active span {
+          background-color: transparent; }
+          nav .nav-bar .nav-mobile #nav-toggle.active span:before, nav .nav-bar .nav-mobile #nav-toggle.active span:after {
+            top: 0; }
+          nav .nav-bar .nav-mobile #nav-toggle.active span:before {
+            -webkit-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+                    transform: rotate(45deg); }
+          nav .nav-bar .nav-mobile #nav-toggle.active span:after {
+            -webkit-transform: rotate(-45deg);
+                -ms-transform: rotate(-45deg);
+                    transform: rotate(-45deg); }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
