--- a/src/css/style.css
+++ b/src/css/style.css
@@ -494,7 +494,7 @@ body {
 .container-fluid {
   padding: 0; }
 
-#about-us .timeline .container-timeline:nth-of-type(1)::after, #about-us .timeline .container-timeline:nth-of-type(3)::after, #about-us .timeline .container-timeline:nth-of-type(2)::before, #about-us .timeline .container-timeline:nth-of-type(4)::before, #about-us .timeline .container-timeline:last-of-type::after {
+#about-us .timeline .container-timeline:nth-of-type(1)::after, #about-us .timeline .container-timeline:nth-of-type(3)::after, #about-us .timeline .container-timeline:nth-of-type(2)::after, #about-us .timeline .container-timeline:nth-of-type(4)::after, #about-us .timeline .container-timeline:last-of-type::after {
   content: '';
   position: absolute;
   width: 170px;
@@ -502,8 +502,13 @@ body {
   border: 4px solid #f1f1f1;
   top: 0;
   border-radius: 50%;
-  z-index: 1;
+  z-index: 2;
   background-color: #f1f1f1; }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    #about-us .timeline .container-timeline:nth-of-type(1)::after, #about-us .timeline .container-timeline:nth-of-type(3)::after, #about-us .timeline .container-timeline:nth-of-type(2)::after, #about-us .timeline .container-timeline:nth-of-type(4)::after, #about-us .timeline .container-timeline:last-of-type::after {
+      width: 130px;
+      height: 130px;
+      background-position: center; } }
 
 #about-us .title {
   margin: 100px auto 80px auto;
@@ -526,7 +531,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   background: transparent; }
-  #about-us .timeline::before {
+  #about-us .timeline::after {
     content: '';
     position: absolute;
     height: 100%;
@@ -539,41 +544,68 @@ body {
             transform: translateX(-50%);
     background-color: #f1f1f1;
     z-index: 1; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      #about-us .timeline::after {
+        height: 80%; } }
+    @media (max-width: 992px) {
+      #about-us .timeline::after {
+        height: 80%;
+        left: 31px; } }
   #about-us .timeline .container-timeline {
     position: relative;
     background-color: transparent;
     width: 50%;
     height: 170px;
     margin-bottom: 95px; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      #about-us .timeline .container-timeline {
+        margin-bottom: 0; } }
+    @media (max-width: 992px) {
+      #about-us .timeline .container-timeline {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px; } }
     #about-us .timeline .container-timeline:nth-of-type(1)::after {
-      background-image: url("../images/about-us/image-1.png");
-      right: 0;
-      -webkit-transform: translateX(50%);
-          -ms-transform: translateX(50%);
-              transform: translateX(50%); }
+      left: 100%;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
+      background-image: url("../images/about-us/image-1.png"); }
+      @media (max-width: 992px) {
+        #about-us .timeline .container-timeline:nth-of-type(1)::after {
+          left: 15px; } }
     #about-us .timeline .container-timeline:nth-of-type(3)::after {
-      background-image: url("../images/about-us/image-3.png");
-      right: 0;
-      -webkit-transform: translateX(50%);
-          -ms-transform: translateX(50%);
-              transform: translateX(50%); }
-    #about-us .timeline .container-timeline:nth-of-type(2)::before {
-      background-image: url("../images/about-us/image-2.png");
+      left: 100%;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
+      background-image: url("../images/about-us/image-3.png"); }
+      @media (max-width: 992px) {
+        #about-us .timeline .container-timeline:nth-of-type(3)::after {
+          left: 15px; } }
+    #about-us .timeline .container-timeline:nth-of-type(2)::after {
       left: 0;
       -webkit-transform: translateX(-50%);
           -ms-transform: translateX(-50%);
-              transform: translateX(-50%); }
-    #about-us .timeline .container-timeline:nth-of-type(4)::before {
-      background-image: url("../images/about-us/image-4.png");
+              transform: translateX(-50%);
+      background-image: url("../images/about-us/image-2.png"); }
+      @media (max-width: 992px) {
+        #about-us .timeline .container-timeline:nth-of-type(2)::after {
+          left: 15px; } }
+    #about-us .timeline .container-timeline:nth-of-type(4)::after {
       left: 0;
       -webkit-transform: translateX(-50%);
           -ms-transform: translateX(-50%);
-              transform: translateX(-50%); }
+              transform: translateX(-50%);
+      background-image: url("../images/about-us/image-4.png"); }
+      @media (max-width: 992px) {
+        #about-us .timeline .container-timeline:nth-of-type(4)::after {
+          left: 15px; } }
     #about-us .timeline .container-timeline:last-of-type::after {
-      right: 0;
-      -webkit-transform: translateX(50%);
-          -ms-transform: translateX(50%);
-              transform: translateX(50%);
+      left: 100%;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
       content: 'Our Story Continues ...';
       text-align: center;
       background-color: #fed136;
@@ -584,18 +616,36 @@ body {
       font-weight: 700;
       text-transform: uppercase;
       padding: 50px 30px; }
+      @media (min-width: 992px) and (max-width: 1199px) {
+        #about-us .timeline .container-timeline:last-of-type::after {
+          padding: 30px 20px;
+          font-size: 14px; } }
+      @media (max-width: 992px) {
+        #about-us .timeline .container-timeline:last-of-type::after {
+          left: 15px; } }
   #about-us .timeline .container-left {
     text-align: right;
     left: 0;
     padding: 10px;
     padding-right: 130px;
     padding-left: 150px; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      #about-us .timeline .container-left {
+        padding-left: 80px;
+        padding-right: 100px; } }
   #about-us .timeline .container-right {
     text-align: left;
     left: 50%;
     padding: 10px;
     padding-left: 130px;
     padding-right: 150px; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      #about-us .timeline .container-right {
+        padding-left: 80px;
+        padding-right: 100px; } }
+    @media (max-width: 992px) {
+      #about-us .timeline .container-right {
+        left: 0; } }
   #about-us .timeline h3 {
     color: #222;
     font-family: "Montserrat", sans-serif;
@@ -604,12 +654,18 @@ body {
     margin-bottom: 17px; }
     #about-us .timeline h3 > span {
       text-transform: uppercase; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      #about-us .timeline h3 {
+        font-size: 16px; } }
   #about-us .timeline p {
     color: #777;
     font-family: "Roboto Slab", serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.3; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      #about-us .timeline p {
+        font-size: 12px; } }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
