--- a/src/css/style.css
+++ b/src/css/style.css
@@ -504,7 +504,7 @@ body {
   border-radius: 50%;
   z-index: 2;
   background-color: #f1f1f1; }
-  @media (min-width: 992px) and (max-width: 1199px) {
+  @media (max-width: 1199px) {
     #about-us .timeline .container-timeline:nth-of-type(1)::after, #about-us .timeline .container-timeline:nth-of-type(3)::after, #about-us .timeline .container-timeline:nth-of-type(2)::after, #about-us .timeline .container-timeline:nth-of-type(4)::after, #about-us .timeline .container-timeline:last-of-type::after {
       width: 130px;
       height: 130px;
@@ -550,7 +550,7 @@ body {
     @media (max-width: 992px) {
       #about-us .timeline::after {
         height: 80%;
-        left: 31px; } }
+        left: 11.5%; } }
   #about-us .timeline .container-timeline {
     position: relative;
     background-color: transparent;
@@ -562,9 +562,8 @@ body {
         margin-bottom: 0; } }
     @media (max-width: 992px) {
       #about-us .timeline .container-timeline {
-        width: 100%;
-        padding-left: 70px;
-        padding-right: 25px; } }
+        width: 90%;
+        margin: 0 auto; } }
     #about-us .timeline .container-timeline:nth-of-type(1)::after {
       left: 100%;
       -webkit-transform: translateX(-50%);
@@ -573,7 +572,7 @@ body {
       background-image: url("../images/about-us/image-1.png"); }
       @media (max-width: 992px) {
         #about-us .timeline .container-timeline:nth-of-type(1)::after {
-          left: 15px; } }
+          left: 7%; } }
     #about-us .timeline .container-timeline:nth-of-type(3)::after {
       left: 100%;
       -webkit-transform: translateX(-50%);
@@ -582,7 +581,7 @@ body {
       background-image: url("../images/about-us/image-3.png"); }
       @media (max-width: 992px) {
         #about-us .timeline .container-timeline:nth-of-type(3)::after {
-          left: 15px; } }
+          left: 7%; } }
     #about-us .timeline .container-timeline:nth-of-type(2)::after {
       left: 0;
       -webkit-transform: translateX(-50%);
@@ -591,7 +590,7 @@ body {
       background-image: url("../images/about-us/image-2.png"); }
       @media (max-width: 992px) {
         #about-us .timeline .container-timeline:nth-of-type(2)::after {
-          left: 15px; } }
+          left: 7%; } }
     #about-us .timeline .container-timeline:nth-of-type(4)::after {
       left: 0;
       -webkit-transform: translateX(-50%);
@@ -600,7 +599,7 @@ body {
       background-image: url("../images/about-us/image-4.png"); }
       @media (max-width: 992px) {
         #about-us .timeline .container-timeline:nth-of-type(4)::after {
-          left: 15px; } }
+          left: 7%; } }
     #about-us .timeline .container-timeline:last-of-type::after {
       left: 100%;
       -webkit-transform: translateX(-50%);
@@ -616,13 +615,16 @@ body {
       font-weight: 700;
       text-transform: uppercase;
       padding: 50px 30px; }
+      @media (max-width: 992px) {
+        #about-us .timeline .container-timeline:last-of-type::after {
+          left: 7%; } }
       @media (min-width: 992px) and (max-width: 1199px) {
         #about-us .timeline .container-timeline:last-of-type::after {
           padding: 30px 20px;
           font-size: 14px; } }
       @media (max-width: 992px) {
         #about-us .timeline .container-timeline:last-of-type::after {
-          left: 15px; } }
+          padding: 25px 7px; } }
   #about-us .timeline .container-left {
     text-align: right;
     left: 0;
@@ -633,6 +635,11 @@ body {
       #about-us .timeline .container-left {
         padding-left: 80px;
         padding-right: 100px; } }
+    @media (max-width: 992px) {
+      #about-us .timeline .container-left {
+        text-align: left;
+        padding-left: 20%;
+        padding-right: 0; } }
   #about-us .timeline .container-right {
     text-align: left;
     left: 50%;
@@ -645,7 +652,9 @@ body {
         padding-right: 100px; } }
     @media (max-width: 992px) {
       #about-us .timeline .container-right {
-        left: 0; } }
+        left: 0;
+        padding-left: 20%;
+        padding-right: 0; } }
   #about-us .timeline h3 {
     color: #222;
     font-family: "Montserrat", sans-serif;
@@ -657,6 +666,9 @@ body {
     @media (min-width: 992px) and (max-width: 1199px) {
       #about-us .timeline h3 {
         font-size: 16px; } }
+    @media (max-width: 992px) {
+      #about-us .timeline h3 {
+        margin-bottom: 10px; } }
   #about-us .timeline p {
     color: #777;
     font-family: "Roboto Slab", serif;
